src/Common/Tests/Error/Init.c
/*
 * Copyright (C) 2006-2009 Daniel Prevost <dprevost@photonsoftware.org>
 *
 * This file is part of Photon (photonsoftware.org).
 *
 * This file may be distributed and/or modified under the terms of the
 * GNU General Public License version 2 or version 3 as published by the 
 * Free Software Foundation and appearing in the file COPYING.GPL2 and 
 * COPYING.GPL3 included in the packaging of this software.
 *
 * Licensees holding a valid Photon Commercial license can use this file 
 * in accordance with the terms of their license.
 *
 * This software is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
 */

/* --+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+-- */

#include "Common/Common.h"
#include "Common/ErrorHandler.h"

/* --+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+-- */

void test_no_initdef( void ** state )
{
#if defined(PSO_UNIT_TESTS)
   psocErrorHandler errorHandler;
   
   expect_assert_failure( psocInitErrorHandler( &errorHandler ) );
#endif
   return;
}

/* --+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+-- */

void test_null_error( void ** state )
{
#if defined(PSO_UNIT_TESTS)
   psocInitErrorDefs();
   
   expect_assert_failure( psocInitErrorHandler( NULL ) );

   psocFiniErrorDefs();
#endif
   return;
}

/* --+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+-- */

void test_pass( void ** state )
{
#if defined(PSO_UNIT_TESTS)
   psocErrorHandler errorHandler;
   int i;
   
   psocInitErrorDefs();
   psocInitErrorHandler( &errorHandler );   
   
   for ( i = 0; i < PSOC_ERROR_CHAIN_LENGTH; ++i ) {
      assert_true( errorHandler.errorCode[i] == 0 );
      assert_true( errorHandler.errorHandle[i] == PSOC_NO_ERRHANDLER );
   }
   assert_true( errorHandler.initialized == PSOC_ERROR_HANDLER_SIGNATURE );
   
   psocFiniErrorHandler( &errorHandler );
   psocFiniErrorDefs();

#endif
   return;
}

/* --+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+-- */

int main()
{
   int rc = 0;
#if defined(PSO_UNIT_TESTS)
   const UnitTest tests[] = {
      unit_test( test_no_initdef ),
      unit_test( test_null_error ),
      unit_test( test_pass )
   };

   rc = run_tests(tests);
   
#endif
   return rc;
}

/* --+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+--+-- */

